2016-10-29  Allen D. Ball  <ball@sol.local>

	* Initial writing.
